src/objects/c2g__AllocationTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationtemplate</customHelpPage>
    <description>Stores the allocation template information.</description>
    <fields>
        <fullName>c2g__AllocatedItem__c</fullName>
        <label>Allocated Item</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transactions</fullName>
                    <default>true</default>
                    <label>Transactions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AllocationMethod__c</fullName>
        <label>Allocation Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AllocationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Rule</label>
        <referenceTo>c2g__AllocationRule__c</referenceTo>
        <relationshipLabel>Allocation Templates</relationshipLabel>
        <relationshipName>AllocationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BasisType__c</fullName>
        <label>Basis Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Statistical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CopyGla__c</fullName>
        <label>Copy GLAs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Basis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Allocation Templates</relationshipLabel>
        <relationshipName>AllocationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationItem__c</fullName>
        <label>Destination Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transactions</fullName>
                    <default>true</default>
                    <label>Transactions</label>
                </value>
                <value>
                    <fullName>Journals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DistributionFields__c</fullName>
        <label>Distribution Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                </value>
                <value>
                    <fullName>Dimension 1</fullName>
                </value>
                <value>
                    <fullName>Dimension 2</fullName>
                </value>
                <value>
                    <fullName>Dimension 3</fullName>
                </value>
                <value>
                    <fullName>Dimension 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IsICTOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Intercompany Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PostDescription__c</fullName>
        <label>Posting Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__StatisticalBasis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statistical Basis</label>
        <referenceTo>c2g__StatisticalBasis__c</referenceTo>
        <relationshipLabel>Statistical Basis Templates</relationshipLabel>
        <relationshipName>StatisticalBasisTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TotalPercentage__c</fullName>
        <label>Total Percentage</label>
        <summarizedField>c2g__AllocationSplitTemplate__c.c2g__PercentageSplit__c</summarizedField>
        <summaryForeignKey>c2g__AllocationSplitTemplate__c.c2g__AllocationTemplate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Allocation Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Allocation Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>